<resources>
    <string name="app_name">TempManager</string>
    <string name="title_home">ホーム</string>
    <string name="title_profile">プロフィール</string>
    <string name="title_setting">設定</string>
    <string name="student_number_profile_fragment_layout">学籍番号</string>
    <string name="name_profile_fragment_layout">名前</string>
    <string name="profile_fix_button_profile_fragment_layout">プロフィールの変更</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_web_client_id_auth">1058820707670-nnmrbnqfahjvh4673r9u4ee14qgu19du.apps.googleusercontent.com</string>
    <string name="welcome_textview_stater_fragment_staring">ようこそ</string>
    <string name="intor_textview_stater_fragment_string">シス研名前出る蔵へ</string>
    <string name="login_button_stater_fragment_string">ログイン</string>
</resources>