<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.profile.ProfileFragment" >

    <com.google.android.material.button.MaterialButton
        android:id="@+id/profile_fix_button_profile_fragment"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginBottom="64dp"
        android:text="@string/profile_fix_button_profile_fragment_layout"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
        app:backgroundTint="@color/purple_500"
        app:cornerRadius="20dp"
        app:icon="@drawable/upgrade_fill0_wght400_grad0_opsz48"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_edit_text_profile_fragment"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/name_icon_image_view_profile_fragment"
        app:layout_constraintTop_toBottomOf="@+id/user_icon_image_view_profile_fragment"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/main_name_edit_text_profile_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_profile_fragment_layout"
            android:imeOptions="actionDone"
            android:inputType="textMultiLine"
            android:maxLines="1"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/student_number_edit_text_profile_fragment"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/student_number_icon_image_view_profile_fragment"
        app:layout_constraintTop_toBottomOf="@+id/name_edit_text_profile_fragment"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/main_student_number_edit_text_profile_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/student_number_profile_fragment_layout"
            android:imeOptions="actionDone"
            android:inputType="textMultiLine"
            android:maxLines="1"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/name_icon_image_view_profile_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:src="@drawable/account_circle_fill0_wght400_grad0_opsz48"
        android:tint="@color/text"
        app:layout_constraintBottom_toBottomOf="@+id/name_edit_text_profile_fragment"
        app:layout_constraintEnd_toStartOf="@+id/name_edit_text_profile_fragment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/name_edit_text_profile_fragment" />

    <ImageView
        android:id="@+id/student_number_icon_image_view_profile_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:src="@drawable/badge_fill0_wght400_grad0_opsz48"
        android:tint="@color/text"
        app:layout_constraintBottom_toBottomOf="@+id/student_number_edit_text_profile_fragment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/student_number_edit_text_profile_fragment" />

    <ImageButton
        android:id="@+id/user_icon_image_view_profile_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:src="@drawable/ic_launcher_foreground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>